--- a/app/assets/styles/modules/_generic-content-container.css
+++ b/app/assets/styles/modules/_generic-content-container.css
@@ -1,7 +1,8 @@
 .generic-content-container {
   p {
-    line-height: 1.65;
     margin: 1.8rem 0;
+    line-height: 1.65;
+    font-weight: 300;
     text-align: justify;
 
     @mixin atSmall {
