--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,12 +1,18 @@
 .row {
-  /* tutaj będziemy czyścić aby flotat mógł poprawnie wyśsietlać zawartość */
+  /* tutaj będziemy czyścić aby flotat mógł poprawnie wyświetlać zawartość */
   @mixin clearfix;
+  &--t-padding {
+    padding-top: 80px;
+  }
 
   &--gutters {
     margin-right: -65px;
   }
   &--gutters-large {
     margin-right: -100px;
+  }
+  &--gutters-small {
+    margin-right: -45px;
   }
 
   &--gutters > div {
@@ -17,6 +23,9 @@
   }
   &--gutters-large > div {
     padding-right: 100px;
+  }
+  &--gutters-small > div {
+    padding-right: 45px;
   }
 
   @mixin atMedium {
@@ -42,6 +51,50 @@
     }
     &__medium-8--smaller {
       width: 63%;
+    }
+  }
+  @mixin atLarge {
+    &__b-margin-until-large {
+      margin-bottom: 0;
+    }
+
+    &__large-4 {
+      float: left;
+      width: 33.333333%;
+    }
+    &__large-4--larger {
+      width: 37%;
+    }
+    &__large-6 {
+      float: left;
+      width: 50%;
+    }
+
+    &__large-8 {
+      float: left;
+      width: 66.666666%;
+    }
+    &__large-8--smaller {
+      width: 63%;
+    }
+  }
+  /* Begin Equal Height Rules */
+  &--equal-height-at-medium {
+    @mixin atMedium {
+      display: flex;
+    }
+    & > div {
+      float: none;
+      display: flex;
+    }
+  }
+  &--equal-height-at-large {
+    @mixin atLarge {
+      display: flex;
+    }
+    & > div {
+      float: none;
+      display: flex;
     }
   }
 }
